--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation libs.androidx.lifecycle.viewmodel.compose
     implementation libs.androidx.runtime.livedata
     implementation libs.coil.compose
+    implementation libs.androidx.navigation.compose
 
     testImplementation libs.junit
 
